--- a/src/mail.html
+++ b/src/mail.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <title>Title</title>
-  </head>
-  <style>
-    body {
-      padding: 0;
-      margin: 0;
-      min-width: 320px;
-      -webkit-text-size-adjust: none;
-    }
-
-
-    @media only screen and (max-width: 750px) {
-        .wrapper-table {
-            width: 100% !important;
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,400,400italic,500,500italic,700,700italic" rel="stylesheet" type="text/css" />
+        <title>Title</title>
+    </head>
+    <style>
+        body {
+            padding: 0;
+            margin: 0;
+            min-width: 320px;
+            -webkit-text-size-adjust: 100%;
         }
-    }
-  </style>
-  <body>
-    <table
-      style="
+
+        @media only screen and (max-width: 750px) {
+            .wrapper-table {
+                width: 100% !important;
+                max-width: none !important;
+            }
+        }
+    </style>
+    <!--[if mso]>
+        <style type="text/css">
+            p {
+                font-family: sans-serif !important;
+            }
+            h1 {
+                font-family: sans-serif !important;
+            }
+            a {
+                font-family: sans-serif !important;
+            }
+        </style>
+    <![endif]-->
+    <body>
+        <table
+            style="
         padding: 0;
         width: 100%;
         background: #f3f3f6;
@@ -35,21 +46,25 @@
         text-align: center;
         font-family: Roboto, Helvetica, Arial, sans-serif;
       "
-      align="center"
-      bgcolor="#f3f3f6"
-      cellpadding="0"
-      cellspacing="0"
-      width="100%"
-    >
-      <tr class="hide-mobile">
-        <td><br /><br /></td>
-      </tr>
-      <tr>
-        <td align="center" style="text-align: center;">
-          <table
-            style="
+            align="center"
+            bgcolor="#f3f3f6"
+            cellpadding="0"
+            cellspacing="0"
+            width="100%"
+        >
+            <tr class="hide-mobile">
+                <td><br /><br /></td>
+            </tr>
+            <tr>
+                <td align="center" style="text-align: center;">
+                    <!--[if (gte mso 9)|(IE)]>
+          <table width="725" align="center"><tr><td style="padding-top:0; padding-bottom:0; padding-right:0; padding-left:0; margin:0px;">
+          <![endif]-->
+                    <table
+                        style="
               padding: 0;
-              width: 725px;
+              width: 100%;
+              max-width: 725px;
               border-collapse: collapse;
               background: #fff;
               overflow: hidden;
@@ -58,59 +73,61 @@
               font-family: Roboto, Calibri, Candara, Segoe, Segoe UI,
                 Helvetica Neue, Helvetica sans-serif;
             "
-            align="center"
-            cellpadding="0"
-            cellspacing="0"
-            width="725"
-            class="wrapper-table"
-          >
-            <tr>
-              <td
-                style="text-align: left; width: 100%; background: #f3f3f6; padding-bottom: 30px;"
-                align="left"
-                width="100%"
-              >
-                <a
-                  href="/"
-                  style="
+                        align="center"
+                        cellpadding="0"
+                        cellspacing="0"
+                        class="wrapper-table"
+                    >
+                        <tr>
+                            <td style="text-align: left; width: 100%; background: #f3f3f6; padding-bottom: 30px;" align="left" width="100%">
+                                <a
+                                    href="/"
+                                    style="
                     color: #4c84ff;
                     text-transform: uppercase;
                     font-weight: 700;
                     font-size: 16px;
                     text-decoration: none;
                   "
-                >
-                  <img
-                    src="img/logo.png"
-                    width="145"
-                    style="vertical-align: middle; display: inline-block;"
-                  />
-                </a>
-              </td>
-             
+                                >
+                                    <img src="img/logo.png" width="145" style="vertical-align: middle; display: inline-block; height: auto;" height="auto" />
+                                </a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="text-align: left; width: 100%; background: #ffffff; padding: 25px 15px; padding-bottom: 15px;" align="left" width="100%">
+                                <h1
+                                    style="text-align: center; font-weight: 700; font-size: 18px; margin: 0; color: #b4b9cb; font-family: Roboto, Calibri, Candara, Segoe, Segoe UI,
+                Helvetica Neue, Helvetica sans-serif; margin-bottom: 10px;"
+                                    align="center"
+                                >
+                                    Заголовок письма
+                                </h1>
+                                <p
+                                    style="text-align: left; font-size: 16px; color: #464544; font-family: Roboto, Calibri, Candara, Segoe, Segoe UI,
+                Helvetica Neue, Helvetica sans-serif;"
+                                >
+                                    Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую
+                                    коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в
+                                    новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.
+                                </p>
+                                <a
+                                    href="/"
+                                    style="text-align: left; font-size: 16px; color: #4c84ff; font-family: Roboto, Calibri, Candara, Segoe, Segoe UI,
+                Helvetica Neue, Helvetica sans-serif;"
+                                    >Ссылка</a
+                                >
+                            </td>
+                        </tr>
+                    </table>
+
+                    <!--[if (gte mso 9)|(IE)]>
+          </td></tr></table><![endif]-->
+                </td>
             </tr>
-            <tr>
-                <td
-                style="text-align: left; width: 100%; background: #ffffff; padding: 25px 15px; padding-bottom: 15px;"
-                align="left"
-                width="100%"
-              >
-                <h1 style="text-align: center; font-weight: 700; font-size: 18px; margin: 0; color: #b4b9cb; font-family: Roboto, Calibri, Candara, Segoe, Segoe UI,
-                Helvetica Neue, Helvetica sans-serif; margin-bottom: 10px;" align="center">Заголовок письма</h1>
-                <p style="text-align: left; font-size: 16px; color: #464544; font-family: Roboto, Calibri, Candara, Segoe, Segoe UI,
-                Helvetica Neue, Helvetica sans-serif;">
-                Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.
-                </p>
-                <a href="/" style="text-align: left; font-size: 16px; color: #4c84ff; font-family: Roboto, Calibri, Candara, Segoe, Segoe UI,
-                Helvetica Neue, Helvetica sans-serif;">Ссылка</a>
-            </td>
+            <tr class="hide-mobile">
+                <td><br /><br /></td>
             </tr>
-          </table>
-        </td>
-      </tr>
-      <tr class="hide-mobile">
-        <td><br /><br /></td>
-      </tr>
-    </table>
-  </body>
+        </table>
+    </body>
 </html>
